templates/mcp/05-networkpolicy-mcp-risk.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: gen-ai-allow-mcp-risk
  namespace: redhat-ods-applications
spec:
  podSelector:
    matchLabels:
      deployment: gen-ai-ui
  egress:
    - ports:
        - protocol: TCP
          port: 8081
      to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: mcp-servers
          podSelector:
            matchLabels:
              app: mcp-risk-server
  policyTypes:
    - Egress
